--- a/Roommates/app/src/main/res/values/strings.xml
+++ b/Roommates/app/src/main/res/values/strings.xml
@@ -2,7 +2,9 @@
     <string name="app_name">Roommates</string>
 
     <string name="kait_text">Kait was here</string>
+    <string name="action_refresh">Refresh</string>
     <string name="action_settings">Settings</string>
     <string name="action_search">Search</string>
-    <string name="action_logout">Log Out</string>
+    <string name="action_signout">Sign Out</string>
+    <string name="action_help">Help &amp; feedback</string>
 </resources>
